<resources>
    <string name="app_name">歌华链路由</string>
    <string name="tab_home">首页</string>
    <string name="tab_wallet">账户</string>
    <string name="account_money_title">账户总额</string>
    <string name="home_notification_content">行情来了就选快捷充值,一秒到账</string>
    <string name="market_announcement">行情分析</string>
    <string name="market_amount">￥ %1$s</string>

    <string name="my_wallet">我的账户</string>
    <string name="create_account_title">创建账户</string>
    <string name="create_account">创建一个账户</string>
    <string name="create_account_pwd_tip">请设置一个不小于8位的交易密码请务必妥善保存，丢失将无法找回</string>
    <string name="has_account_import">已有账户，立即导入账户</string>
    <string name="set_first_pwd">请输入密码</string>
    <string name="set_twice_pwd">请再次输入密码</string>
    <string name="create_account_success">帐号创建成功！</string>
    <string name="set_first_pwd_error">输入密码小于8位</string>
    <string name="set_twice_pwd_error">两次输入密码不一致</string>
    <string name="create_account_error">创建帐号失败，请重试！</string>
    <string name="keep_password_attention">注意保存密码</string>
    <string name="keep_password_attention_content">请妥善保存你的密码，丢失将无法找回,是否确认提交</string>
    <string name="cancel">取消</string>
    <string name="sure">确认</string>


    <string name="account_name">账户%1$d</string>
    <string name="account_money">余额 %1$s</string>

    <string name="create_success_tip">创建成功了！\n就差一步备份了</string>
    <string name="backup_success_title">备份成功</string>
    <string name="backup_success_content">备份成功！文件已备份至%1$s</string>
</resources>
