<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">
    <include layout="@layout/title_bar"
        android:layout_height="50dp"
        android:layout_width="match_parent"/>

    <EditText
        android:id="@+id/set_first_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/edit_text_hint_color"
        android:inputType="textPassword"
        android:hint="@string/set_first_pwd"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="40dp" />

    <EditText
        android:id="@+id/set_twice_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/edit_text_hint_color"
        android:inputType="textPassword"
        android:hint="@string/set_twice_pwd"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="20dp" />

    <TextView
        android:textSize="12sp"
        android:text="@string/create_account_pwd_tip"
        android:textColorHint="@color/edit_text_hint_color"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="35dp"
        android:background="@mipmap/btn_yellow_bg"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:text="@string/create_account"
        android:textSize="17sp" />

    <TextView android:id="@+id/tv_import_account"
        android:textSize="14sp"
        android:text="@string/has_account_import"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
