<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f5f7"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:background="@mipmap/bg_home_title"
        android:gravity="top">

        <TextView
            android:id="@+id/home_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/title_margin_top"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="@dimen/one_text_size" />

        <ImageView
            android:id="@+id/home_add_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="@dimen/add_margin_top"
            android:layout_marginTop="@dimen/add_margin_top"
            android:scaleType="center"
            android:src="@mipmap/ic_home_add" />

        <LinearLayout
            android:id="@+id/account_title_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/home_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/account_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_money_title"
                android:textColor="@android:color/white"
                android:textSize="@dimen/one_text_size" />

            <ImageView
                android:id="@+id/account_eye_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:scaleType="center"
                android:src="@mipmap/ic_eye" />
        </LinearLayout>


        <TextView
            android:id="@+id/account_money"
            android:layout_below="@id/account_title_ll"
            android:layout_marginTop="23dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="0"
            android:textColor="@android:color/white"
            android:textSize="39sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/home_notification_rl"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:background="@android:color/white">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="21dp"
            android:layout_marginTop="14dp"
            android:src="@mipmap/ic_notification" />
        <ImageView
            android:id="@+id/notification_arrow_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:src="@mipmap/ic_arrow" />

        <ImageView android:id="@+id/notification_content_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/notification_arrow_iv"
            android:src="@mipmap/ic_notification_content" />
        <TextView
            android:id="@+id/notification_content_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@id/notification_content_iv"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="21dp"
            android:marqueeRepeatLimit="marquee_forever"
            android:maxLines="1"
            android:text="@string/home_notification_content"
            android:textColor="#333333"
            android:textSize="12sp" />

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white" />
</LinearLayout>